FIXED flex child alignment
to avoid unnecessary spaces between the icon and the text

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -97,6 +97,7 @@ body {
                     .forecast-title{
                         padding-top: 30px;
                         color: #605050;
+                        margin-left: auto;
                     }
                     span{
                         font-weight: bold;
